--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -6,9 +6,12 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
-        - name: welcome message
-          run: echo "My first github actions job"
-
+        - name: Checkout Repo
+          run: actions/Checkout@v4
+             
+        - name: Welcome message
+          run: echo "my first github actions job"
+               
         - name: List files
           run: ls
 
