--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -7,11 +7,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: Checkout Repo
-          run: actions/Checkout@v4
+          uses: actions/checkout@v4
              
         - name: Welcome message
           run: echo "my first github actions job"
-               
+
         - name: List files
           run: ls
 
