--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,12 +8,20 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
-             
-        - name: Welcome message
-          run: echo "my first github actions job"
 
-        - name: List files
-          run: ls
+        - name: List and Read files
+          run: |
+            echo "myf irst github actions job"
+            ls -la
+            cat README.md
+        
+        - nmae: Generate ASCII Artwork
+          run: cowsay -f dragon "Hello, GitHub Actions!" >> dragon.txt
+#      # - name: Welcome message
+#          run: echo "my first github actions job"
+
+ #       - name: List files
+ #         run: ls
           
 
 
